# anvil-engine

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CMakeSettings.json  Doxyfile  LICENSE  README.md  _array_8h_source.html  _core_8h_source.html  _core_p_c_h_8h_source.html  _dynamic_allocator_8h_source.html  _memory_utils_8h_source.html  _test_array_8h_source.html  _types_8h_source.html  _windows_commons_8h_source.html  annotated.html  class_memory_utils-members.html  class_memory_utils.html  class_t_array-members.html  class_t_array.html  class_t_dynamic_allocator-members.html  class_t_dynamic_allocator.html  classes.html  cpp.hint  dir_0b6ee6e7e9547e675db4add2e5de97da.html  dir_4a2fff7aed2d6e905fb7c212d1566389.html  dir_52dd32f792f3328812d6ea4539e6cd08.html  dir_61b2b17f9d7eb121fecc4e915454d026.html  dir_71cec18faf944a4b88c651119af69473.html  dir_78a26cdad9c7b4df5f17364772beada9.html  dir_78e5a749fd36bc3bb99987cdde207d81.html  dir_8e3fd4408a568a4770e45c41326db232.html  dir_a5f9d088354e25b0efec6ef60fc24210.html  dir_b206ad3afc47366b89edcb51e9427b22.html  dir_ce584cec0cf69f51b5033e1d916213d9.html  dir_df8db72c64489af7d9ceb70bb41aa9bc.html  files.html  (+6 more)
CMake/: BuildEngine.cmake  BuildLauncher.cmake  CommonOptions.cmake  LinuxClangSetup.cmake  Modules.cmake  WindowsSetup.cmake
Engine/Code/Runtime/Core/: CMakeLists.txt  Core.h  CorePCH.h  TypeTraits.h  Types.h
Engine/Code/Runtime/Core/Containers/: AnvilString.cpp  AnvilString.h  Array.h  CharacterConverter.h  ContainerAllocators.h  ContainersFwd.h  Map.h  Set.h  StringFormatArgument.cpp  StringFormatArgument.h  StringFormatter.cpp  StringUtils.cpp  StringUtils.h
Engine/Code/Runtime/Core/Math/: AnvilMath.h
Engine/Code/Runtime/Core/Memory/: MemoryUtils.cpp  MemoryUtils.h
Engine/Code/Runtime/Core/Memory/Allocators/: DynamicAllocator.h
Engine/Code/Runtime/Core/Misc/: CRC32.cpp  CRC32.h  StdHash.h
Engine/Code/Runtime/Core/OS/Windows/: WindowsCommons.h
Engine/Code/Runtime/Core/Serialization/: Archive.h  MemoryReader.h  MemoryWriter.h
Engine/Code/Runtime/Launch/Windows/: CMakeLists.txt  WindowsLauncher.cpp  anvil.rc  resource.h
search/: all_3.js  all_4.js  all_5.js  all_7.js  (+10 more)
(+11 files in other folders)
